# GLEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE_assets  README.md
cmake/: embed.cmake  embed.cpp  harfbuzz.cmake  paktool.cmake  paktool.cpp  wgpu-native.cmake
include/: Colors.h  Engine.h  GLMath.h  InputManager.h  Matrix.h  MatrixStack.h  MouseManager.h  PakFile.h  Resource.h  ResourceManager.h  Vectors.h  Widget.h  engine_GLUT.h
include/3d/: Actor.h  ActorComponent.h  ActorPrimitiveComponent.h  ActorSceneComponent.h  Pawn.h  Transform.h
include/3d/actors/: DirectionalLightActor.h  StaticMeshActor.h
include/3d/components/: CameraComponent.h  DirectionalLightComponent.h  PointLightComponent.h
include/3d/mesh/: GizmoComponent.h  InstancedStaticMeshComponent.h  StaticMesh.h  StaticMeshComponent.h
include/3d/objects/: InstancedDrawTracker.h  LightTracker.h
include/3d/text/: Font.h  SlugTextComponent.h
include/3d/texture/: StaticTexture2D.h
include/console/: Console.h
include/pipeline/: RenderObject.h  RenderObjects.h  Renderer.h
include/pipeline/gl/: GLRenderer.h
include/pipeline/wgpu/: GPUMesh.h  GPUPointer.h  GPUTexture.h  RenderPipeline.h  TransferManager.h  TypedGPUBUffer.h  TypedGPUBuffer.h  WGPURenderer.h  WrappedBuffer.h
include/pipeline/wgpu/pipeline/: ComputePipeline.h  Pipeline.h  RenderPipeline.h
include/widgets/: Button.h  PerfCounter.h
src/: Colors.cpp  Engine.cpp  GLMath.cpp  MatrixStack.cpp  ResourceManager.cpp  Widget.cpp
src/3d/: Actor.cpp  ActorComponent.cpp  ActorPrimitiveComponent.cpp  ActorSceneComponent.cpp  DefaultPawn.cpp  DefaultPawn.h  Pawn.cpp  Transform.cpp
src/3d/actors/: DirectionalLightActor.cpp  StaticMeshActor.cpp
src/3d/components/: CameraComponent.cpp  DirectionalLightComponent.cpp  PointLightComponent.cpp
src/3d/mesh/: GizmoComponent.cpp  InstancedStaticMeshComponent.cpp  StaticMesh.cpp  StaticMeshComponent.cpp
src/3d/objects/: InstancedDrawTracker.cpp  LightTracker.cpp
src/3d/text/: Font.cpp  Font.h  SlugTextComponent.cpp  SlugTextComponent.h  slug.wgsl  truetype.c  truetype.h
src/3d/texture/: StaticTexture2D.cpp
src/console/: Console.cpp
src/input/: InputManager.cpp  MouseManager.cpp
src/pipeline/: RenderObjects.cpp
src/pipeline/gl/: GLRenderer.cpp
src/pipeline/wgpu/: GPUMesh.cpp  RenderPipeline.cpp  TransferManager.cpp  WGPURenderer.cpp  WrappedBuffer.cpp
src/pipeline/wgpu/pipeline/: ComputePipeline.cpp  Pipeline.cpp  RenderPipeline.cpp
src/pipeline/wgpu/shaders/: BasicLit.wgsl  BasicLitInstanced.wgsl  Gizmo.wgsl
src/private/: MouseManager.cpp
src/widgets/: Button.cpp  PerfCounter.cpp
test/: RgbTriangle.cpp  RgbTriangle.h  main.cpp
test2d/: RgbTriangle.cpp  main.cpp
test3d/: CubeSceneComponent.cpp  CubeSceneComponent.h  Enterprise.cpp  Enterprise.h  Environment.cpp  Environment.h  PilotableCube.cpp  PilotableCube.h  SpinnyCube.cpp  SpinnyCube.h  main.cpp
